# RT-2

./: .fdignore  README.md  example.py  pali_example.py  pyproject.toml  requirements.txt  setup.py  test.py  train.py
docs/: DATASETS.md  EVALUATION.md  MODEL.md  ROBOTEVALSUITE.md  cache_title.json  metadata.json  sitemap.xml  tree.html
docs/data/: 0.json
docs/data/titles/: 0.json
docs/doc/: 0ef94468-1744-4a77-835c-17422b80755c.json  75e7ca52-6585-4fbd-9d0b-7847858adc38.json  7af332a9-f24c-4753-8e65-5d004fbca4d4.json  ac81d036-76e8-4c72-9bce-b6c7b457b212.json  b22da96e-4287-4076-9500-dbde9d397f4c.json  bcd14111-4a7b-4cfa-b133-1dfc220c71cb.json  fec8ced4-2b63-4add-8209-ce4b23d847a6.json
docs/src/: requirements.txt
docs/src/rt2/: model.py
rt2/: README.md  __init__.py  attend.py  model.py  palme.py  rt2_pali.py  train.py  transformer.py
rt2/experimental/: example.py  pali_example.py  rt2_pali.py  rt2_palme.py
rt2/models/: palme.py
tests/: test.py
